// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods submitRequest graphql failure 1`] = `
<div
  className={
    Object {
      "data-css-1prrpm3": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submission error
    </title>
  </SideEffect(Head)>
  <FormDialog
    narrow={false}
    noPadding={false}
  >
    <SubmitPane
      backUrl="/request?code=CSMCINC"
      backUrlAs="/request/CSMCINC"
      error={[Error: Error submitting]}
      state="error"
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 1`] = `
<div
  className={
    Object {
      "data-css-1prrpm3": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submitting…
    </title>
  </SideEffect(Head)>
  <FormDialog
    narrow={false}
    noPadding={false}
  >
    <SubmitPane
      state="submitting"
      ui={
        Ui {
          "handleResize": [Function],
          "handleScroll": [Function],
        }
      }
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 2`] = `
<div
  className={
    Object {
      "data-css-1prrpm3": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Success: Case 17-000000001
    </title>
  </SideEffect(Head)>
  <FormDialog
    narrow={false}
    noPadding={false}
  >
    <CaseView
      noMap={false}
      request={
        Object {
          "address": "City Hall Plaza, Boston, MA 02131",
          "closureComment": "Found Thanos. Smashed him into the floor with all of us standing around.",
          "closureReason": "Case Resolved",
          "description": "I think that Thanos is here",
          "expectedAtString": null,
          "id": "17-000000001",
          "images": Array [
            Object {
              "originalUrl": "https://pbs.twimg.com/media/C22X9ODXgAABGKS.jpg",
              "squarePreviewUrl": "https://pbs.twimg.com/media/C22X9ODXgAABGKS.jpg",
              "tags": Array [],
            },
          ],
          "location": Object {
            "lat": 42.359927299999995,
            "lng": -71.0576853,
          },
          "requestedAtString": "March 7, 2017, 12:59 PM",
          "service": Object {
            "code": "CSMCINC",
            "name": "Cosmic Intervention",
          },
          "serviceNotice": null,
          "status": "closed",
          "updatedAtString": "April 8, 2017, 12:59 PM",
        }
      }
      store={
        AppStore {
          "_liveAgentButtonId": "",
          "accessibility": Accessibility {
            "el": null,
            "messageListenerDisposer": null,
          },
          "addressSearch": AddressSearch {
            "searchPopupWidth": 0,
          },
          "allServices": AllServices {
            "groups": Array [
              Group {
                "description": "Help for pet owners, or issues with animals, rodents, and pests.",
                "id": "Animals",
                "name": "Animals",
              },
              Group {
                "description": "Have an issue with the price or measurement of gas, oil, or another product?",
                "id": "Fees-Pricing",
                "name": "Fees and pricing",
              },
              Group {
                "description": "Get help for a public safety or disability issue, or request a health inspection.",
                "id": "Health-Safety",
                "name": "Health, safety, and social services",
              },
              Group {
                "description": "File requests for repairs, permits, tree plantings, and even make donations.",
                "id": "Parks-Public",
                "name": "Parks and public space",
              },
              Group {
                "description": "We offer help to developers, homeowners, and renters on many issues.",
                "id": "Property-Construction",
                "name": "Property, housing, and construction",
              },
              Group {
                "description": "Have a problem with a City school bus? Want to see something repaired at a school?",
                "id": "Schools",
                "name": "Schools",
              },
              Group {
                "description": "Request a plow, ask for a space saver to be removed, or report an unshoveled sidewalk.",
                "id": "Snow",
                "name": "Snow or weather-related concerns",
              },
              Group {
                "description": "You can report issues with street signs and signals, among other transportation issues.",
                "id": "Streets-Sidewalks",
                "name": "Streets, sidewalks, traffic, and vehicles",
              },
              Group {
                "description": "Do you need help with trash or recycling? Want us to clean up a part of the City?",
                "id": "Trash-Graffiti",
                "name": "Trash, recycling, and graffiti",
              },
              Group {
                "description": "We can help if you have a problem with your electricity, water, or gas.",
                "id": "Utilities",
                "name": "Utilities",
              },
              Group {
                "description": "General requests that don’t fit into a category.",
                "id": "Other",
                "name": "Other services",
              },
            ],
            "otherGroup": Group {
              "description": "These services have not yet been categorized",
              "id": "",
              "name": "Uncategorized services",
            },
          },
          "apiKeys": Object {},
          "browserLocation": BrowserLocation {
            "watchId": null,
          },
          "languages": Array [],
          "requestSearch": RequestSearch {
            "boundsSet": false,
            "boundsSetDisposer": null,
            "debouncedSearch": [Function],
            "mapMoved": false,
            "searchDisposer": null,
          },
          "siteAnalytics": SiteAnalytics {},
          "ui": Ui {
            "handleResize": [Function],
            "handleScroll": [Function],
          },
        }
      }
      submitted={true}
    />
  </FormDialog>
</div>
`;

exports[`rendering contact 1`] = `
<div
  className={
    Object {
      "data-css-1prrpm3": "",
    }
  }
>
  <div
    className="p-a300 p-a800--xl br br-t400 br--y css-1aypqv0"
    style={
      Object {
        "maxWidth": 800,
      }
    }
  >
    <form
      onSubmit={[Function]}
    >
      <div>
        <div
          className=" sh sh--y "
        >
          <h1
            className="sh-title"
          >
            Cosmic Incursion
          </h1>
        </div>
        <p
          className="m-v300 t--info"
        >
          Why are we asking for your contact information? We’ll use it to email you about the status of your report. We may also have to follow up with you.
        </p>
        <p
          className="m-v300 t--subinfo"
        >
          <strong>
            We won’t make your information public.
          </strong>
           
        </p>
        <div
          className="txt"
        >
          <label
            className="txt-l"
            htmlFor="ContactPane-firstName"
          >
            First Name 
            <span
              className="t--req"
            >
              Required
            </span>
          </label>
          <input
            aria-required={true}
            className="txt-f"
            id="ContactPane-firstName"
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            style={
              Object {
                "width": "100%",
              }
            }
            type="text"
            value=""
          />
        </div>
        <div
          className="txt"
        >
          <label
            className="txt-l"
            htmlFor="ContactPane-lastName"
          >
            Last Name 
            <span
              className="t--req"
            >
              Required
            </span>
          </label>
          <input
            aria-required={true}
            className="txt-f"
            id="ContactPane-lastName"
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            style={
              Object {
                "width": "100%",
              }
            }
            type="text"
            value=""
          />
        </div>
        <div
          className="txt"
        >
          <label
            className="txt-l"
            htmlFor="ContactPane-email"
          >
            Email 
            <span
              className="t--req"
            >
              Required
            </span>
          </label>
          <input
            aria-required={true}
            className="txt-f"
            id="ContactPane-email"
            name="email"
            onChange={[Function]}
            placeholder="Email"
            style={
              Object {
                "width": "100%",
              }
            }
            type="email"
            value=""
          />
        </div>
        <div
          className="txt"
        >
          <label
            className="txt-l"
            htmlFor="ContactPane-phone"
          >
            Phone
          </label>
          <input
            className="txt-f"
            id="ContactPane-phone"
            name="phone"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onPaste={[Function]}
            placeholder="Phone"
            style={
              Object {
                "width": "100%",
              }
            }
            type="tel"
            value=""
          />
        </div>
        <div
          className="m-v500 g"
        >
          <div
            className="cb"
          >
            <input
              checked={false}
              className="cb-f"
              id="ContactPane-remember"
              name="remember"
              onChange={[Function]}
              type="checkbox"
              value="true"
            />
            <label
              className="cb-l"
              htmlFor="ContactPane-remember"
            >
              Remember contact info on this computer
            </label>
          </div>
        </div>
      </div>
      <div
        className="g m-v500 css-1k8tu3j"
      >
        <div
          className="g--8 t--info m-v200 css-hn0yet"
        >
          <span>
            Please fill out 
            <span
              className="t--req"
            >
              required
            </span>
             fields to continue
          </span>
        </div>
        <button
          className="btn g--4"
          disabled={true}
          type="submit"
        >
          Submit Request
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`rendering location 1`] = `
<div
  className={
    Object {
      "data-css-ik3lvy": "",
    }
  }
>
  <div
    className=" br br-t400 br--y css-1aypqv0"
    style={Object {}}
  >
    <div
      className={
        Object {
          "data-css-xmixgj": "",
        }
      }
    >
      <div
        className="css-m89tpz"
      >
        <div
          className="p-a300"
        >
          <form
            action="#"
            className="sf sf--md sf--y"
            onSubmit={[Function]}
          >
            <div
              className="sf-i"
            >
              <input
                aria-label="Address search field"
                className="sf-i-f"
                onChange={[Function]}
                placeholder="Search address…"
                type="text"
                value=""
              />
              <button
                className="sf-i-b"
                disabled={true}
                type="submit"
              >
                Search
              </button>
            </div>
          </form>
        </div>
        <div
          className={
            Object {
              "data-css-129qykh": "",
            }
          }
        />
        <div
          className="g p-a300 css-1k8tu3j"
        >
          <div
            className="g--7 t--subinfo m-v200"
          >
            <a
              href="javascript:void(0)"
              onClick={[Function]}
            >
              Continue without location
            </a>
          </div>
          <button
            className="btn g--5"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering questions 1`] = `
<div
  className={
    Object {
      "data-css-1prrpm3": "",
    }
  }
>
  <div
    className="p-a300 p-a800--xl br br-t400 br--y css-1aypqv0"
    style={Object {}}
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className=" sh sh--y "
      >
        <h1
          className="sh-title"
        >
          Cosmic Incursion
        </h1>
      </div>
      <div
        className="t--intro m-v300"
      >
        Bad things getting in from other universes
      </div>
      <div
        className="g g--top"
      >
        <div
          className="g--7 m-v500"
        >
          <div
            className="txt"
          >
            <label
              className="txt-l"
              htmlFor="QuestionsPane-description"
              style={
                Object {
                  "marginTop": 0,
                }
              }
            >
              Description
            </label>
            <textarea
              className="txt-f"
              id="QuestionsPane-description"
              name="description"
              onChange={[Function]}
              placeholder="Please describe your request"
              rows="5"
              value=""
            />
          </div>
          <div>
            <div
              className="txt"
            >
              <label
                className="txt-l"
                htmlFor="ST-CMTS"
              >
                Please provide any other relevant information:
                 
              </label>
              <textarea
                aria-required={false}
                className="txt-f"
                id="ST-CMTS"
                name="ST-CMTS"
                onChange={[Function]}
                rows="5"
                value=""
              />
            </div>
          </div>
          <hr
            aria-hidden={true}
            className="hr hr--dash m-v500"
          />
          <div>
            <div
              className="txt"
            >
              <label
                className="txt-l"
                htmlFor="INFO-CSIRMV1"
              >
                **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
                 
              </label>
              <input
                aria-required={false}
                className="txt-f "
                id="INFO-CSIRMV1"
                name="INFO-CSIRMV1"
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <hr
            aria-hidden={true}
            className="hr hr--dash m-v500"
          />
          <div>
            <div
              aria-labelledby="SR-CSIRMV1-label"
              role="radiogroup"
            >
              <div
                className="m-v300"
              >
                <label
                  className="txt-l"
                  id="SR-CSIRMV1-label"
                >
                  How many dimensions have been breached?
                   
                  <span
                    className="t--req"
                  >
                    Required
                  </span>
                </label>
              </div>
              <div
                className="g"
              >
                <div
                  className="g--12"
                >
                  <div
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      id="SR-CSIRMV1-One"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="One"
                    />
                    <label
                      className="ra-l"
                      htmlFor="SR-CSIRMV1-One"
                    >
                      One
                    </label>
                  </div>
                  <div
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      id="SR-CSIRMV1-Two"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="Two"
                    />
                    <label
                      className="ra-l"
                      htmlFor="SR-CSIRMV1-Two"
                    >
                      Two
                    </label>
                  </div>
                  <div
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      id="SR-CSIRMV1-Three"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="Three"
                    />
                    <label
                      className="ra-l"
                      htmlFor="SR-CSIRMV1-Three"
                    >
                      Three
                    </label>
                  </div>
                  <div
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      id="SR-CSIRMV1-More than Three"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="More than Three"
                    />
                    <label
                      className="ra-l"
                      htmlFor="SR-CSIRMV1-More than Three"
                    >
                      More than Three
                    </label>
                  </div>
                  <span />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="g--5 m-v500"
        >
          <div
            className="br br-a200"
          >
            <div
              aria-disabled={false}
              className="css-19ub58"
              onClick={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              <img
                alt=""
                aria-hidden={true}
                height="324"
                src="/assets/img/image-upload.png"
                style={
                  Object {
                    "display": "block",
                    "height": "auto",
                    "width": "100%",
                  }
                }
                width="479"
              />
              <input
                accept="image/*"
                autoComplete="off"
                disabled={false}
                multiple={false}
                onChange={[Function]}
                style={
                  Object {
                    "display": "none",
                  }
                }
                type="file"
              />
            </div>
            <div
              className="br br-t200"
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <button
                className="btn btn--w btn--b"
                onClick={[Function]}
                style={
                  Object {
                    "visibility": "visible",
                    "width": "100%",
                  }
                }
                type="button"
              >
                Upload Photo
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="g m-v500 css-1k8tu3j"
      >
        <div
          className="g--9 t--info m-v200 css-hn0yet"
        >
          <span>
            Please fill out 
            <span
              className="t--req"
            >
              required
            </span>
             fields to continue
          </span>
        </div>
        <button
          className="btn g--3"
          disabled={true}
          type="submit"
        >
          Next
        </button>
      </div>
    </form>
  </div>
</div>
`;
